Bug 143493 - kf5: Typing apostrophe no longer works (at least with German keyboard layout)
Summary: kf5: Typing apostrophe no longer works (at least with German keyboard layout)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2021-07-22 04:16 UTC by Michael Weghorn
Modified: 2021-07-23 16:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2021-07-22 04:16:40 UTC
Steps to reproduce:

0. Use German keyboard layout (might be the same with others, but I didn't try)
1. start LO writer with kf5 VCL plugin
2. try to type an apostrophe (') by pressing Shift + #

Result: Nothing is inserted in the document

Expected result: An apostrophe (') should be inserted
Comment 1 Michael Weghorn 2021-07-22 04:18:54 UTC
This is a regression from

commit 862fdb98ca271b60a831cd5420fd16d5f9c1c747
Author: Jan-Marek Glogowski <glogow@fbihome.de>
Date:   Mon Jul 19 15:17:53 2021 +0200

    tdf#143298 Qt5 send SalEvent::KeyModChange events
    
    I originally omitted this in the Qt implementation, as I couldn't
    find any non-working use case.
    
    The implementation got a bit hacky, because Qt doesn't have a non-
    native way to identify different L/R modifier keys, so we must
    process the X11/xkb keycode ourself, which obviously won't work on
    Wayland... but most times this is not relevant, so the default
    modifier notification may be good enough.
    
    P.S. it's basically the same code then X11 and Gtk...
    
    Change-Id: I37fbfde4a33a966b6017f3e0c280e2c7ea91e4db
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/119235
    Tested-by: Jenkins
    Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
    Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>

and works again after locally reverting this commit

LO version I used for testing:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 7be0f62de07aa3a046f0996eeb673d9a4d7c9672
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Adding CC: to Jan-Marek Glogowski
Comment 2 Commit Notification 2021-07-22 17:28:22 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/22997c4777eeb424493d1259b72db9a15ff37069

tdf#143493 Qt5 key modifier events don't have text

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-07-22 20:03:06 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/a42061523737e8d49778303c787af25cb29c9d6e

tdf#143493 Qt5 key modifier events don't have text

It will be available in 7.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Weghorn 2021-07-23 16:33:47 UTC
Thanks, works again with current master.