tdf#143493 Qt5 key modifier events don't have text

Regression from commit 862fdb98ca271b60a831cd5420fd16d5f9c1c747
("tdf#143298 Qt5 send SalEvent::KeyModChange events").

Change-Id: I6981af06e3a73dee45ed10416f5d3b17b860a73b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/119375
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>